<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="50dp"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView 
       	android:id="@+id/loginHead"
        android:src="@drawable/ic_launcher"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp" 
        android:contentDescription="@string/text_head"/>
    <EditText
        android:id="@+id/loginEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user_name"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_pwd"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" 
        android:gravity="right">

        <Button
            android:id="@+id/loginBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/login_text" />

        <Button
            android:id="@+id/loginBtnSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_text" />
    </LinearLayout>

</LinearLayout>