<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6699ff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnRollback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rollback" />

        <Button
            android:id="@+id/btnAskpeace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_askpeace" />

        <Button
            android:id="@+id/btnGiveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_giveup" />
    </LinearLayout>

</LinearLayout>