<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="10dp" >

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_logout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_margin="20dp"
            android:id="@+id/menuHead"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/head1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <TextView
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/text_name" />

        <TextView
            android:id="@+id/textName"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <TextView
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/text_score" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/text_vicount" />

        <TextView
            android:id="@+id/textVicount"
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >

        <TextView
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/text_decount" />

        <TextView
            android:id="@+id/textDecount"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/text_drcount" />

        <TextView
            android:id="@+id/textDrcount"
            android:layout_width="0dp"
            android:padding="5dp"
            android:textSize="8pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnFindGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_findgame" />
    </LinearLayout>

</LinearLayout>